hero video added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- <img src="./img/hero-img.jpg" alt="Dune Awakening"> -->
           <!-- 🔹 Video Background -->
           <video class="video-bg" autoplay muted loop playsinline controls>
-            <source src="https://youtu.be/t2pIWa4GtAk" type="video/mp4" />
+            <source src="./v/welcome.mp4" type="video/mp4" />
           </video>
         </section>
       </section>
