--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>New Bloodline</title>
   </head>
   <body>
-    <header class="header hide-navbar" id="header">
+    <header class="header" id="header">
       <section class="container">
         <nav class="navbar">
           <ul class="list">
@@ -39,7 +39,7 @@
         <section class="container">
             <!-- <img src="./img/hero-img.jpg" alt="Dune Awakening"> -->
           <!-- 🔹 Video Background -->
-          <video class="video-bg" autoplay muted loop playsinline controls>
+          <video class="video-bg" autoplay muted loop playsinline>
             <source src="./v/welcome.mp4" type="video/mp4" />
           </video>
         </section>
