--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <nav class="navbar">
           <ul class="list">
             <li class="list-item"><a href="" class="list-link">Anasayfa</a></li>
-            <li class="list-item"><a href="" class="list-link">Hakkimizda</a></li>
-            <li class="list-item"><a href="" class="list-link">Forum</a></li>
+            <li class="list-item"><a href="#info" class="list-link">Hakkimizda</a></li>
+            <li class="list-item"><a href="#forum" class="list-link">Forum</a></li>
             <li class="list-item"><button class="sign_btn" id="sign_btn">Basvur</button></li>
           </ul>
         </nav>
@@ -55,7 +55,7 @@
             </section>
         </section>
       </section>
-      <section class="card-nav">
+      <section class="card-nav" id="info">
         <section class="container">
             <ul class="card-list">
                 <li class="card-item itemHover">
@@ -79,7 +79,7 @@
                  <li class="card-item">
                     <a href="https://discord.com/channels/1369792499643842642/1369804364197138543" class="card-link" target="_blank">
                         <section class="overlay"></section>
-                        <img src="./img/card03.jpg" alt="Klips" >
+                        <img src="./img/card03.png" alt="Klips" >
                         <section class="card-content hide-card">
                             <h3 class="card-head">Öneri</h3>
                         </section>
@@ -97,7 +97,7 @@
                 <li class="card-item">
                     <a href="https://discord.com/channels/1369792499643842642/1369804546225999872" class="card-link" target="_blank">
                         <section class="overlay"></section>
-                        <img src="./img/card04.jpg" alt="Klips">
+                        <img src="./img/card04.png" alt="Klips">
                         <section class="card-content hide-card">
                             <h3 class="card-head">Blacklist</h3>
                         </section>
@@ -106,10 +106,10 @@
             </ul>
         </section>
       </section>
-      <section class="forum">
+      <section class="forum" id="forum">
         <section class="container">
             <section class="forum-content">
-                <a href="">
+                <a href="forum.html">
                     <h3 class="content-head">Aramiza Katil</h3>
                 </a>
                     <p class="content-para">Topluluğun bir parçasi ol, fikrini paylaş!</p>
