--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <li class="card-item">
                     <a href="https://discord.com/channels/1369792499643842642/1369804332178083891" target="_blank" class="card-link">
                         <section class="overlay"></section>
-                        <img src="./img/card02.jpg" alt="Klips" >
+                        <img src="./img/card02.jpg" alt="SSS" >
                         <section class="card-content hide-card">
                             <h3 class="card-head">SSS</h3>
                         </section>
@@ -79,7 +79,7 @@
                  <li class="card-item">
                     <a href="https://discord.com/channels/1369792499643842642/1369804364197138543" class="card-link" target="_blank">
                         <section class="overlay"></section>
-                        <img src="./img/card03.png" alt="Klips" >
+                        <img src="./img/card03.png" alt="Öneri" >
                         <section class="card-content hide-card">
                             <h3 class="card-head">Öneri</h3>
                         </section>
@@ -88,16 +88,16 @@
                 <li class="card-item">
                     <a href="https://discord.com/channels/1369792499643842642/1369804432685924442" class="card-link" target="_blank">
                         <section class="overlay"></section>
-                        <img src="./img/card02.jpg" alt="Klips" >
+                        <img src="./img/card02.jpg" alt="Ansiklopedi" >
                         <section class="card-content hide-card">
                             <h3 class="card-head">Ansiklopedi</h3>
                         </section>
                     </a>
                 </li>                        
                 <li class="card-item">
-                    <a href="https://discord.com/channels/1369792499643842642/1369804546225999872" class="card-link" target="_blank">
+                    <a href="https://discord.com/channels/1369792499643842642/1369804546225999872" class="card-link" target="_blank" >
                         <section class="overlay"></section>
-                        <img src="./img/card04.png" alt="Klips">
+                        <img src="./img/card04.png" alt="Blacklist">
                         <section class="card-content hide-card">
                             <h3 class="card-head">Blacklist</h3>
                         </section>
