--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <section class="container">
         <nav class="navbar">
           <ul class="list">
-            <li class="list-item"><a href="" class="list-link">Anasayfa</a></li>
-            <li class="list-item"><a href="#info" class="list-link">Hakkimizda</a></li>
-            <li class="list-item"><a href="#forum" class="list-link">Forum</a></li>
+            <li class="list-item"><a href="#" class="list-link">Anasayfa</a></li>
+            <li class="list-item"><a href="#" class="list-link" id="info">Hakkimizda</a></li>
+            <li class="list-item"><a href="#forum" class="list-link" id="forum">Forum</a></li>
             <li class="list-item"><button class="sign_btn" id="sign_btn">Basvur</button></li>
           </ul>
         </nav>
@@ -61,7 +61,7 @@
                 <li class="card-item itemHover">
                     <a href="https://discord.com/channels/1369792499643842642/1369792500432113738" target="_blank" class="card-link">
                         <section class="overlay"></section>
-                        <img src="./img/card01.jpg" alt="Klips">
+                        <img src="./img/card02.jpg" alt="Klips">
                         <section class="card-content">
                             <h3 class="card-head">Klipler</h3>
                         </section>
@@ -70,7 +70,7 @@
                 <li class="card-item">
                     <a href="https://discord.com/channels/1369792499643842642/1369804332178083891" target="_blank" class="card-link">
                         <section class="overlay"></section>
-                        <img src="./img/card02.jpg" alt="SSS" >
+                        <img src="./img/card01.jpg" alt="SSS" >
                         <section class="card-content hide-card">
                             <h3 class="card-head">SSS</h3>
                         </section>
@@ -79,7 +79,7 @@
                  <li class="card-item">
                     <a href="https://discord.com/channels/1369792499643842642/1369804364197138543" class="card-link" target="_blank">
                         <section class="overlay"></section>
-                        <img src="./img/card03.png" alt="Öneri" >
+                        <img src="./img/card03new.png" alt="Öneri" >
                         <section class="card-content hide-card">
                             <h3 class="card-head">Öneri</h3>
                         </section>
@@ -88,7 +88,7 @@
                 <li class="card-item">
                     <a href="https://discord.com/channels/1369792499643842642/1369804432685924442" class="card-link" target="_blank">
                         <section class="overlay"></section>
-                        <img src="./img/card02.jpg" alt="Ansiklopedi" >
+                        <img src="./img/card06.png" alt="Ansiklopedi" >
                         <section class="card-content hide-card">
                             <h3 class="card-head">Ansiklopedi</h3>
                         </section>
@@ -122,8 +122,10 @@
             <section class="footer-content">
                 <h3 class="footer-head">New Bloodline</h3>
                 <p class="footer-para">New Bloodline Offical Guild Page</p>
+                
             </section>
         </section>
+        <p class="footer-date">2025-05-25</p>
     </footer>
   </body>
 </html>
