--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <main>
       <section class="hero">
         <section class="container">
-            <!-- <img src="./img/hero-img.jpg" alt="Dune Awakening"> -->
           <!-- 🔹 Video Background -->
-          <video class="video-bg" autoplay muted loop playsinline>
-            <source src="./v/welcome.mp4" type="video/mp4" />
+           <video class="video-bg" autoplay muted loop playsinline>
+            <source src="./v/0512_1.mp4" type="video/mp4" />
           </video>
+          <img src="./img/hero-img.jpg" alt="Welcome Dune" class="mobile-hero" height="275px">
         </section>
       </section>
       <section class="ad">
@@ -112,7 +112,7 @@
                 <a href="forum.html">
                     <h3 class="content-head">Aramiza Katil</h3>
                 </a>
-                    <p class="content-para">Topluluğun bir parçasi ol, fikrini paylaş!</p>
+                    <p class="content-para">Topluluğun bir parçası ol, fikrini paylaş!</p>
             </section>
         </section>
       </section>
@@ -120,12 +120,9 @@
     <footer>
         <section class="container">
             <section class="footer-content">
-                <h3 class="footer-head">New Bloodline</h3>
-                <p class="footer-para">New Bloodline Offical Guild Page</p>
-                
-            </section>
+              <h3 class="footer-head">New Bloodline Official Guild Page </h3>            
+              </section>
         </section>
-        <p class="footer-date">2025-05-25</p>
     </footer>
   </body>
 </html>
