--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="container">
           <!-- 🔹 Video Background -->
            <video class="video-bg" autoplay muted loop playsinline>
-            <source src="./v/0512_1.mp4" type="video/mp4" />
+            <source src="./v/0512.mp4" type="video/mp4" />
           </video>
           <img src="./img/hero-img.jpg" alt="Welcome Dune" class="mobile-hero" height="275px">
         </section>
