--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <ul class="list">
             <li class="list-item"><a href="#" class="list-link">Anasayfa</a></li>
             <li class="list-item"><a href="#" class="list-link" id="info">Hakkimizda</a></li>
-            <li class="list-item"><a href="#forum" class="list-link" id="forum">Forum</a></li>
+            <li class="list-item"><a href="forum.html" class="list-link" id="forum">Forum</a></li>
             <li class="list-item"><button class="sign_btn" id="sign_btn">Basvur</button></li>
           </ul>
         </nav>
